# AAfflux

./: Camunda集成方案.md  PROJECT_STRUCTURE.md  README.md  olve conflicts  业务实现对比分析.md  元数据引擎设计方案.md  当前BPM改造方案.md
api/: .dockerignore  .env.example  .env.test  .gitignore  APP_STRUCTURE_REFACTORED.md  COMPLETE_BUSINESS_TABLES.md  DATABASE_SETUP.md  Dockerfile  FINAL_MODELS_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  clean_test_database.py  docker-compose.yml  executor.py  main.py  pyproject.toml  pytest.ini  setup_database.py  setup_test_database.py  test_simple.py  verify_config.py  verify_setup.py
api/.kiro/hooks/: code-quality-analyzer.kiro.hook  ruff_check.kiro.hook
api/.kiro/specs/low-code-platform-backend/: design.md  requirements.md  tasks.md
api/.kiro/specs/metadata-engine/: design.md  examples.md
api/.kiro/specs/model-base-refactor/: design.md  requirements.md  tasks.md
api/alembic/: env.py
api/alembic/versions/: 0dfdc9a62656_initial_migration_with_all_models.py  559fb8d7205a_initial_migration_with_all_models_and_.py  add_soft_delete_fields.py
api/app/: __init__.py  main.py
api/app/api/v1/: __init__.py  auth.py  bpm_approvals.py  bpm_processes.py  bpm_tasks.py  file.py  users.py  workflows.py
api/app/core/: celery.py  config.py  database.py  logging.py  mongodb.py  redis.py  sentry.py
api/app/core/storage/: __init__.py  base.py  exceptions.py  gridfs.py
api/app/engine/bpm/: __init__.py  executor.py  task_dispatcher.py
api/app/middleware/: auth.py
api/app/models/: __init__.py  application.py  base.py  execution.py  file.py  provider.py  template.py  user.py  workflow.py
api/app/models/application/: __init__.py  application.py  llm_provider.py  prompt_template.py
api/app/models/audit/: __init__.py  audit_log.py
api/app/models/auth/: __init__.py  api_key.py  token.py  user.py
api/app/models/billing/: __init__.py  billing.py
api/app/models/bpm/: __init__.py  approval.py  form.py  process.py  task.py
api/app/models/conversation/: __init__.py  annotation.py  conversation.py  end_user.py
api/app/models/dataset/: __init__.py  dataset.py
api/app/models/file/: __init__.py  reference.py  service.py
api/app/models/metadata/: __init__.py  model.py
api/app/models/plugin/: __init__.py  plugin.py
api/app/models/tenant/: __init__.py  invitation.py  organization.py
api/app/models/workflow/: __init__.py  workflow.py
api/app/schemas/: AuthSchema.py  __init__.py  auth_schema.py  bpm_approval_schemas.py  bpm_process_schemas.py  bpm_task_schemas.py  file.py  user.py  workflow.py
api/app/services/: __init__.py  auth_service.py  bpm_approval_service.py  bpm_process_service.py  bpm_task_service.py  file_server.py  permission_checker.py  user_service.py  workflow_serializer.py  workflow_service.py  workflow_validator.py
api/app/utils/: dag.py  password.py  token.py
api/docs/: APP_STRUCTURE_REFACTORED.md  COMPLETE_BUSINESS_TABLES.md  FINAL_MODELS_SUMMARY.md  env_configuration.md  env_quick_guide.md  sqlmodel_vs_sqlalchemy.md
api/docs/joookdoc/: METADATA_ENGINE_STATUS.md  SOFT_DELETE_MIGRATION.md  TASK_2_8_IMPLEMENTATION_PLAN.md  check_tables.py  task.md
api/examples/: config_demo.py
api/tests/: README.md  conftest.py  test_base_models.py  test_database_setup.py  test_infrastructure.py  test_workflow_service.py  test_workflow_validation_serialization.py
api/tests/test_auth/: __init__.py  test_user_crud.py
web/: README.md  package.json  pnpm-lock.yaml  quasar.config.ts
