[project]
name = "low-code-platform-backend"
version = "0.1.0"
description = "Low-code platform backend with workflow orchestration and AI integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pymongo>=4.10.1",
    "motor>=3.6.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.1",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pylance>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.6",
    "factory-boy>=3.3.1",
    "black>=24.10.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
